--- a/_config.yml
+++ b/_config.yml
@@ -16,12 +16,10 @@
 title: joesdesk
 email: jomar.sastrillo@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Website for Jomar's profile 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  github.com/joesdesk
+github_username:  joesdesk
 
 # Build settings
 markdown: kramdown
